# fluid_contacts

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  config.py  manage.py  prepare-toxenv.sh  pyproject.toml  tox.ini
migrations/: env.py
migrations/versions/: 0dedff865af5_.py  c29f0e53fadd_.py
src/fluid_contacts/: __init__.py
src/fluid_contacts/api/: __init__.py  resources.py
src/fluid_contacts/models/: __init__.py  contact.py  user.py
tests/: conftest.py  test_authentication.py  test_contacts_crud.py  test_fluid_contacts.py  test_models.py
