[tool.poetry]
name = "fluid_contacts"
version = "0.1.0"
description = ""
authors = ["Shaibu Shaibu <s.shaibu.jnr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
waitress = "^1.2"
flask = "^1.0"
flask-sqlalchemy = "^2.3"
psycopg2 = "^2.7"
flask_migrate = "^2.4"
flask_script = "^2.0"
passlib = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.6"
tox = "^3.7"

[tool.black]
line-length = 79
skip-string-normalization = true


[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = lint, py37

[testenv]
passenv=HOME USER
whitelist_externals =
    bash
    poetry
skip_install = true
commands =
    bash ./prepare-toxenv.sh {envbindir} {toxinidir}
    poetry run py.test --cov-report term-missing --cov=fluid_contacts tests

[testenv:lint]
whitelist_externals =
    bash
    poetry
skip_install = true
deps =
    pylint
commands =
    bash ./prepare-toxenv.sh {envbindir} {toxinidir}
    pylint --rcfile={toxinidir}/.pylintrc {toxinidir}/src/fluid_contacts {toxinidir}/tests
"""
